# PicoFFT

./: CMakeLists.txt  README.md  adc_sampling.c  adc_sampling.h  config_settings.h  fft_realtime_unified.c  fft_realtime_unified.h  fft_smooth_display.c  fft_smooth_display.h  fft_streaming_display.c  fft_streaming_display.h  lcd_partial_update.c  lcd_partial_update.h  main.c
lib/: CMakeLists.txt  lcd_test.c  main.h
lib/fft/: CMakeLists.txt  fft_analyzer.c  fft_analyzer.h  fft_analyzer_kiss.c  fft_analyzer_kiss_new.c  fft_display.c
lib/kiss_fft/: CMakeLists.txt  _kiss_fft_guts.h  kiss_fft.c  kiss_fft.h
lib/lcd/: CMakeLists.txt  double_buffer.c  double_buffer.h
lib/sdcard/: MMC_SD.h
